--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "license": "MIT",
   "devDependencies": {
     "vuepress": "^1.9.7"
+  },
+  "dependencies": {
+    "node-forge": "^1.2.1"
   }
 }
